remove use of java9 List.of add a test